listing field visibility fix

--- a/nidirect_landing_pages/css/landing_listing.css
+++ b/nidirect_landing_pages/css/landing_listing.css
@@ -9,3 +9,7 @@
 #edit-field-listing-wrapper {
   display: none !important;
 }
+/* Unless we are in the node edit form ! */
+.page-node-type-landing-page #edit-field-listing-wrapper {
+  display: block !important;
+}
